# casin-o-zan

./: .env  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-53895f704ba69d1d756934f7c201496254d2dd0aede502f97574604b9070c485.json
migrations/: 20240617005244_init.up.sql
src/: consts.rs  context.rs  error.rs  main.rs  models.rs
src/routes/: auth.rs  login_route.rs  mod.rs  register_route.rs
src/store/: mod.rs  store.rs
