[package]
name = "casin-o-zan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono","bigdecimal"] }
dotenv = "0.15.0"
serde_with = "1.9.0"
axum-macros = "0.3.8"
md5 = "0.7.0"
jsonwebtoken = "9.3.0"